Changes in Music section, fixed header and main section overflow.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,6 +29,8 @@ header {
     justify-content: space-between;
     width: 100%;
     margin: 0 auto;
+    flex-wrap: wrap;
+    overflow: auto;
 }
 
 .header {
@@ -42,10 +44,12 @@ header {
     justify-content: space-between;
     */
 }
+
 .header__logo {
     margin: 0;
     padding-right: 0;
 }
+
 .header__img {
     /* float: left; */
     width: 220px;
@@ -109,12 +113,17 @@ main {
     padding: 25px;
     align-content: center;
     grid-gap: 0;
+    outline: deeppink solid 5px;
+    overflow: scroll;
+    min-width: auto;
+    min-height: auto;
 }
 
 section {
     margin: 0;
     padding: 0
 }
+
 .main__header {
     font-size: 2rem;
     margin: 10px 10px 5px;
@@ -146,6 +155,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-width: 0;
 }
 
 .main__img {
@@ -193,6 +203,7 @@ section {
     border: 1px solid black;
     transition: all .3s ease-in-out;
     margin: 0 10px;
+    #display: inline-block;
 }
 
 .article__image:hover {
@@ -220,6 +231,10 @@ section {
     transform: none;
 }
 
+.article__image_small-vertical {
+    height: 40px
+}
+
 .article__link {
     color: white;
     background-color: #99b4ff;
@@ -233,6 +248,55 @@ section {
 
 .article__main-text-author {
     font-style: italic;
+}
+
+.article__datetime {
+    font-style: italic;
+    color: white;
+    border: #b39959 solid 1px;
+    display: inline;
+}
+
+.article__music {
+    display: flex;
+    margin: 0;
+    box-sizing: border-box;
+    justify-content: space-evenly;
+    padding: inherit;
+    width: 100%;
+    overflow: auto;
+    flex-wrap: wrap;
+    min-height: 0;
+    min-width: 0;
+}
+
+.article__music-item {
+    margin: 10px;
+    outline: beige solid 1px;
+    display: inline-flex;
+    justify-content: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    width: fit-content;
+    min-width: 0;
+    overflow: scroll;
+    align-content: center;
+    align-items: center;
+}
+
+.article__music-name {
+    padding: 10px;
+    margin: 0;
+    display: inline;
+}
+
+.article__link_music {
+    align-content: center;
+}
+
+.article__image_music {
+    border: none;
+    padding: 5px 0;
 }
 
 /* footer */
